#bannersResponse In this commit, I got to add the images and titles of the banners

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: App
 description: A new Flutter project.
 
@@ -23,6 +24,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+4
 
 
   # The following adds the Cupertino Icons font to your application.
